fixed horizontal scroll problems
☠☠☠☠

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 }
 nav {
     background-color: #E7E8CF;
-    width: 100%;
 	padding: 20px;
 }
 nav ul {
